# research-agent

./: .env.example  .gitignore  Makefile  brief.md  hld.md  pyproject.toml  test_arxiv_api_client.py  test_arxiv_fetcher.py  test_dependency_injection.py
.cursor/rules/: code-quality.mdc  implementation-process.mdc
.cursor/rules/coding/: architecture-planning.mdc  implementation.mdc  integration-planning.mdc  problem-understanding.mdc  subagent-reviewer.mdc
config/base/: llm.yaml
config/dev/: llm.yaml
config/prod/: llm.yaml
infra/database/: README.md  init-db.sql
infra/docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
scripts/: production_test.py
src/: __init__.py
src/services/fetchers/arxiv/: __init__.py  config.py  exceptions.py  interfaces.py
src/services/fetchers/arxiv/schemas/: __init__.py  messages.py  paper.py
src/services/fetchers/arxiv/services/: __init__.py  api_client.py  cache_manager.py  fetcher.py  pdf_processor.py  publisher.py  query_processor.py
src/services/fetchers/arxiv/utils/: __init__.py  rate_limiter.py
src/services/fetchers/huggingface/: __init__.py  config.py  exceptions.py  interfaces.py
src/services/fetchers/huggingface/schemas/: __init__.py  messages.py  model.py
src/services/fetchers/huggingface/services/: __init__.py  api_client.py  cache_manager.py  fetcher.py  parser.py  publisher.py
src/services/fetchers/kaggle/: __init__.py  config.py  exceptions.py  interfaces.py
src/services/fetchers/kaggle/schemas/: __init__.py  messages.py  notebook.py
src/services/fetchers/kaggle/services/: __init__.py  api_client.py  cache_manager.py  fetcher.py  parser.py  publisher.py
src/shared/: constants.py
src/shared/api/: health_router.py
src/shared/db/: README.md  config.py  health.py  seed.py  session.py
src/shared/db/migrations/: alembic.ini  env.py
src/shared/db/migrations/versions/: 20241222_initial_schema.py  20241223_add_system_tables.py
src/shared/exceptions/: __init__.py  base.py  cache.py  config.py  database.py  external_api.py  http.py  llm.py
src/shared/interfaces/: __init__.py
src/shared/llm/: __init__.py  anthropic_client.py  base.py  ollama_client.py  openai_client.py  router.py
src/shared/messaging/: README.md  __init__.py  circuit_breaker.py  config.py  connection.py  consumer.py  exceptions.py  health.py  metrics.py  publisher.py  queue_setup.py  retry.py  schemas.py
src/shared/models/: __init__.py  base.py  digest.py  feedback.py  source.py  system.py  user.py
src/shared/repositories/: __init__.py  base.py  digest_repository.py  feedback_repository.py  source_repository.py  system_repository.py  user_repository.py
src/shared/testing/: __init__.py  mocks.py
src/shared/utils/: __init__.py  circuit_breaker.py  error_response.py  retry.py
src/shared/utils/cache/: __init__.py  connection.py  decorator.py  keys.py  metrics.py  serializers.py  service.py
src/shared/utils/config/: __init__.py  loader.py  locator.py  merger.py  substitutor.py  yaml_loader.py
src/shared/utils/db/: __init__.py  batch.py  decorators.py  upsert.py  vector_search.py
src/shared/utils/logging/: __init__.py  context.py  factory.py  formatters.py  handlers.py
tests/: README.md  __init__.py  conftest.py  factories.py
tests/e2e/: __init__.py  conftest.py  test_full_workflow.py
tests/fixtures/: db.py  docker.py
tests/integration/database/: __init__.py  test_vector_search_postgres.py
tests/integration/messaging/: __init__.py  test_circuit_breaker_integration.py  test_consumer_integration.py  test_publisher_integration.py
tests/integration/shared/: __init__.py
tests/integration/shared/db/: __init__.py  test_seeding.py
tests/unit/shared/: __init__.py
tests/unit/shared/db/: __init__.py  test_health.py
tests/unit/shared/messaging/: __init__.py  test_circuit_breaker.py  test_circuit_breaker_logic.py  test_config.py  test_health.py  test_metrics.py  test_retry.py  test_schemas.py
tests/unit/shared/repositories/: __init__.py  test_base_repository.py  test_vector_search.py
